--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>BucketLister</title>
-        <script src="final.js"></script>
+        <script src="index.js"></script>
         <link rel="stylesheet" href="final.css">
     </head>
     <body>
@@ -70,7 +70,7 @@
                 <p>See the Northern Lights <br> <input type="checkbox" id="iceland1" value="See the Northern Lights" check>Add to Bucket List
                 <br>
                 <br> 
-                Visit glaciers <br> <input type="checkbox" id="iceland2" value="Visit glaciers" heck>Add to Bucket List</p>
+                Visit glaciers <br> <input type="checkbox" id="iceland2" value="Visit glaciers" check>Add to Bucket List</p>
             </div>
         </div>
     
